# EdgeNPU-API

./: .gitignore  CMakeLists.txt  README.md
docs/: API.md  CONVERT.md
examples/: curl_examples.sh  python_client.py  rkllm-server.service
include/: base64.h  telemetry.h
lib/image_enc/: image_enc.cc
src/: main_server.cpp
tests/: CMakeLists.txt
tests/unit/: test_main.cpp
